new file:   .env.production 	modified:   .gitignore 	new file:   README.md 	modified:   index.html 	modified:   package-lock.json 	modified:   package.json 	new file:   src/assets/img/Xiaohuang_Cl 2023.png 	new file:   src/components/SkinViewer.vue 	modified:   src/lang/init.ts 	modified:   src/main.ts 	modified:   src/router/index.ts 	new file:   src/services/useMetaData.ts 	new file:   src/types/MetaData.ts 	new file:   src/utils/useApiUrl.ts 	renamed:    src/public/CodeValidator.ts -> src/views/auth/CodeValidator.ts 	renamed:    src/public/EmailRegExp.ts -> src/views/auth/EmailRegExp.ts 	modified:   src/views/auth/Layout.vue 	modified:   src/views/auth/Login.vue 	renamed:    src/public/PasswordValidator.ts -> src/views/auth/PasswordValidator.ts 	modified:   src/views/auth/Register.vue 	modified:   src/views/user/Welcome.vue 	modified:   tsconfig.app.json 	modified:   vite.config.ts

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,10 +9,13 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@a/*": ["./src/assets/*"],
-      "@c/*": ["./src/components/*"],
-      "@v/*": ["./src/views/*"],
-      "@s/*": ["./src/stores/*"]
+      "@assets/*": ["./src/assets/*"],
+      "@components/*": ["./src/components/*"],
+      "@views/*": ["./src/views/*"],
+      "@stores/*": ["./src/stores/*"],
+      "@services/*": ["./src/services/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@types/*": ["./src/types/*"]
     }
   }
 }
