--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "skinview3d": "^3.0.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.12.0",
     "vue-router": "^4.3.0"
